force-app/main/default/objects/API_log__c/API_log__c.object-meta.xml
<CustomObject>
    <label>API log</label>
    <nameField>
        <label>API log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>API logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>