force-app/main/default/objects/API_log__c/fields/Exception_desc__c.field-meta.xml
<CustomField>
    <fullName>Exception_desc__c</fullName>
    <label>Exception Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>