force-app/main/default/objects/API_log__c/fields/IMS_Pin_log__c.field-meta.xml
<CustomField>
    <fullName>IMS_Pin_log__c</fullName>
    <label>IMS Pin log</label>
    <type>TextArea</type>
</CustomField>