force-app/main/default/objects/API_log__c/fields/Log_Name__c.field-meta.xml
<CustomField>
    <fullName>Log_Name__c</fullName>
    <label>Log Name</label>
    <type>TextArea</type>
</CustomField>