force-app/main/default/objects/API_log__c/fields/response_time__c.field-meta.xml
<CustomField>
    <fullName>response_time__c</fullName>
    <label>Response time</label>
    <type>DateTime</type>
</CustomField>