force-app/main/default/objects/API_log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Log_Name__c</columns>
    <columns>Request__c</columns>
    <columns>IMS_Pin_log__c</columns>
    <columns>Response__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Log_Name__c</field>
        <operation>equals</operation>
        <value>GetImsPin</value>
    </filters>
    <label>All</label>
</ListView>